public/css/tat.css
/* ... */
.input-group {
	margin-left: 15% !important;
	width: 350px !important;
}

#form-control1 {
	position: fixed;
	top: -50px;
	right: -310px;
}
.btn-default {
	background-color: #ff5800 !important;
	color: white !important; 
    background: -webkit-linear-gradient(#ff670f 0%, #ff5800 100%)!important;
    background: -o-linear-gradient(#ff670f 0%, #ff5800 100%)!important;
    background: linear-gradient(#ff670f 0%, #ff5800 100%)!important; 
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5800', endColorstr='#ff5800',GradientType=0 )!important;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;   
}
#letsgo {
	background: #fecf75 !important;
	background-image: -webkit-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -moz-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -ms-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -o-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: linear-gradient(to bottom, #fecf75, #fb6966)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
#side-dropdowns {
	width: 250px;
	height: 50px;
	font-size: 18px;
	background: #fecf75 !important;
	background-image: -webkit-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -moz-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -ms-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -o-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: linear-gradient(to bottom, #fecf75, #fb6966)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
#side-dropdowns-blue {
	width: 250px;
	height: 50px;
	font-size: 18px;
	background: #44c4f8 !important;
	background-image: -webkit-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: -moz-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: -ms-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: -o-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: linear-gradient(to bottom, #44c4f8, #3144a2)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
#side-dropdowns-aqua {
	width: 250px;
	height: 50px;
	font-size: 18px;
	background: #0a9ef4 !important;
	background-image: -webkit-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: -moz-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: -ms-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: -o-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: linear-gradient(to bottom, #0a9ef4, #00f9a7)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
#send-button {
	margin-bottom: 10px;
	background: #fecf75 !important;
	background-image: -webkit-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -moz-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -ms-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -o-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: linear-gradient(to bottom, #fecf75, #fb6966)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
#letsgo-about {
	background: #44c4f8 !important;
	background-image: -webkit-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: -moz-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: -ms-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: -o-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: linear-gradient(to bottom, #44c4f8, #3144a2)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
/* ... */

